@@ -496,6 +496,7 @@ struct lldpd_hardware {
 	u_int8_t h_lport_previous_id_subtype;
 	char *h_lport_previous_id;
 	int h_lport_previous_id_len;
+	char *h_ifdescr_previous;
 
 	struct lldpd_port h_lport;	   /* Port attached to this hardware port */
 	TAILQ_HEAD(, lldpd_port) h_rports; /* Remote ports */
